--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
+    "@types/gl-matrix": "^2.4.5",
     "element-plus": "^2.13.1",
+    "gl-matrix": "^3.4.4",
+    "regl": "^2.1.1",
     "vue": "^3.5.24",
     "vue-router": "^4.6.4"
   },
