--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "element-plus": "^2.13.1",
     "gl-matrix": "^3.4.4",
     "regl": "^2.1.1",
+    "regl-worldview": "^0.18.1",
     "vue": "^3.5.24",
     "vue-router": "^4.6.4"
   },
