--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/gl-matrix": "^2.4.5",
     "element-plus": "^2.13.1",
     "gl-matrix": "^3.4.4",
+    "pinia": "^3.0.4",
     "regl": "^2.1.1",
     "regl-worldview": "^0.18.1",
+    "roslib": "^2.0.1",
     "vue": "^3.5.24",
     "vue-router": "^4.6.4"
   },
